k8s/platform/keycloak/ingress-master-realm.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: local-root-ca
    cert-manager.io/duration: 168h
    cert-manager.io/renew-before: 24h
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - keycloak.app.test
      secretName: keycloak-tls
  rules:
    - host: keycloak.app.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 80
